dubbo-samples-mesh-k8s/deploy/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dubbo-demo
  labels:
    istio-injection: enabled
